# tafseer-nabulsi

./: .gitignore  404.html  AGENTS.md  README.md  index.html  robots.txt  sitemap.xml  wrangler.jsonc
assets/: NotFound-C8GGz50i.js  NotFound-DftHwRmv.js  SearchBar-DBTWAht4.js  SearchBar-MDjFcid5.js  SurahView-B4agUJbt.js  SurahView-ROi6R8bX.js  index-C_xIwzGP.js  index-D5Y8DwWb.js  index-D9ghfFei.js  index-QcYeEXq_.css  index-RUPMZBj1.js  index-dVrJFNU1.css  index-xBXml_Db.css
data/: 100.json  102.json  105.json  107.json  108.json  110.json  111.json  112.json  15.json  16.json  24.json  25.json  26.json  32.json  34.json  37.json  38.json  39.json  4.json  41.json  42.json  43.json  44.json  47.json  48.json  49.json  51.json  54.json  55.json  61.json  63.json  65.json  66.json  74.json  76.json  78.json  79.json  80.json  81.json  83.json  (+10 more)
docs/: all-cloudflare-migration-status.md  ayah-formatting-summary.md  clean-code-plan-formatting.md  clean-code-plan.md  clean-code-summary.md  cloudflare-supabase-guide.md  how-to-deploy-to-github-pages.md  (+9 more)
pipeline/: .gitignore  README.md  media.csv.example  pyproject.toml
pipeline/src/: __main__.py  config.py  main.py
pipeline/src/media/: mapper.py
pipeline/src/merge/: builder.py
pipeline/src/quran/: fetcher.py  parser.py
pipeline/src/tafsir/: category_index.py  content_extractor.py  lesson_parser.py  scraper.py  surah_index.py
pipeline/src/utils/: cache.py  logging_setup.py  rate_limit.py
pipeline/tests/: test_builder.py  test_category_index.py  test_lesson_parser.py  test_mapper.py  test_sitemap_parsing.py
(+140 files in other folders)
