[project]
name = "tafsir-pipeline"
version = "0.1.0"
description = "Data pipeline for Tafsir Nabulsi Quran project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pytest>=9.1.1",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
